added bike type

--- a/BikeInventory1/BikeInventory1/Views/Bikes/Delete.cshtml
+++ b/BikeInventory1/BikeInventory1/Views/Bikes/Delete.cshtml
@@ -30,6 +30,12 @@
             @Html.DisplayFor(model => model.Qty)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.BikeType)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.BikeType)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Price)
         </dt>
         <dd>
